--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,14 @@
 /* Global */
 body {background-color:#FFF; color:#333; font-family:Helvetica, Arial, sans-serif;}
 
+.tab {display:none;}
+.active {display:block;}
+
+nav {margin:30px 0;}
+nav li {display:inline-block; margin:0 5px;}
+nav a {background:#f9f9f9; border:3px solid #e3e3e3; border-radius:100px; font-size:12px; height:100px; line-height:100px; text-transform:uppercase; width:100px;}
+nav a:hover {background:#efefef;}
+
 
 /* Header */
 header.block {border-bottom:1px solid #efefef; margin-bottom:20px; padding-bottom:2px;}
