--- a/css/global.css
+++ b/css/global.css
@@ -5,10 +5,13 @@ body {background-color:#FFF; color:#333; font-family:Helvetica, Arial, sans-seri
 .tab {display:none;}
 .active {display:block;}
 
-nav {margin:30px 0;}
+nav {background:#4a525b; padding:30px 0;}
 nav li {display:inline-block; margin:0 5px;}
-nav a {background:#f9f9f9; border:3px solid #e3e3e3; border-radius:100px; font-size:12px; height:100px; line-height:100px; text-transform:uppercase; width:100px;}
-nav a:hover {background:#efefef;}
+nav a {background:#f9f9f9; border:6px solid #aab3bb; border-radius:100px; font-size:12px; height:100px; line-height:100px; text-transform:uppercase; width:100px;}
+nav a:hover,
+nav a.active {background:#efefef;}
+
+.questions .four {}
 
 
 /* Header */
