--- a/css/global.css
+++ b/css/global.css
@@ -2,60 +2,27 @@
 /* Global */
 body {background-color:#FFF; color:#333; font-family:Helvetica, Arial, sans-serif;}
 
-.tab {display:none;}
-.active {display:block;}
 
+/* Navigation */
 nav {background:#4a525b; padding:30px 0;}
 nav li {display:inline-block; margin:0 5px;}
 nav a {background:#f9f9f9; border:6px solid #aab3bb; border-radius:100px; font-size:12px; height:100px; line-height:100px; text-transform:uppercase; width:100px;}
 nav a:hover,
 nav a.active {background:#efefef;}
-
-.questions .four {}
-
-
-/* Header */
-header.block {border-bottom:1px solid #efefef; margin-bottom:20px; padding-bottom:2px;}
-header .logo {float:left;}
-
-header nav ul {font-size:0;}
-header nav li {display:inline-block;}
-header nav li a {display:block; font-family:"proxima-nova", helvetica, arial, sans-serif;}
-header nav li:last-child a {border-right:0;}
-header nav li.menu-parent-item {position:relative;}
-header nav li.menu-parent-item > a {background:url('../images/sprite/icons.png') no-repeat right -36px; padding-right:35px;}
-header nav li.menu-parent-item ul {background-color:#121212; display:none; padding:9px 0; position:absolute; text-align:left; top:19px; width:100%;}
-header nav li.menu-parent-item:hover ul {display:block;}
-header nav li.menu-parent-item ul li a {border:0; display:block; padding:5px 15px 5px 25px; text-align:left;}
-
-header nav.community-nav {padding:15px 0 25px; text-align:right;}
-header nav.community-nav li a {padding:0 15px;}
-header nav.community-nav li:last-child a {padding-right:0;}
-
-header nav.nav {float:left; margin-left:40px; padding:4px 0;}
-header nav.nav li a {font-size:20px; padding:0 35px;}
-
-header .sign-up {float:right;}
+nav a.active {border:6px solid #999; font-weight:bold;}
 
 
-/* Footer */
-footer {padding:50px 0 100px;}
-footer .navigation {float:left; padding:19px 0; width:60%;}
-footer .navigation ul {font-size:0;}
-footer .navigation li {display:inline-block;}
-footer .navigation li a {display:block; float:none; font-family:"proxima-nova", sans-serif; padding-right:50px; text-transform:uppercase;}
-footer .navigation li:last-child a {background:none;}
+/* Body */
+section {min-height:800px;}
+section .tab {display:none;}
+section .tab > p {padding:0 10%;}
+section .active {display:block;}
 
-footer .newsletter {float:right; width:418px;}
-footer .newsletter input[type="text"] {background-color:#464646; width:310px;}
-footer .newsletter input[type="submit"] {background-color:#fff; border-radius:3px; color:#232323; font-size:28px; margin-left:-3px; padding:0 10px;}
+.questions {display:none;}
+.questions .question {border:1px solid #efefef; border-radius:2px; min-height:400px; padding:30px;}
+.questions .question h3 span {background:#efefef; border-radius:35px; color:#fff; display:block; font-size:40px; font-weight:bold; height:70px; line-height:70px; margin:0 auto 10px; text-shadow:1px 1px 1px #ddd; width:70px;}
+.questions .question p {color:#999;}
 
-footer .social {float:right; margin-top:20px;}
-footer .social li {display:inline-block; margin-left:10px;}
-footer .social li a {background:url('../images/sprite/icons.png') no-repeat -3px -56px; display:block; height:40px; margin-left:-3px; overflow:hidden; text-indent:-999px; width:40px;}
-footer .social .rss a {background-position:-3px -56px;}
-footer .social .twitter a {background-position:-44px -56px;}
-footer .social .facebook a {background-position:-85px -56px;}
-footer .social .pinterest a {background-position:-127px -56px;}
+.role .button {font-size:12px; line-height:12px; padding:4px 6px;}
 
-footer .copyright {font:12px georgia, serif;}
+.tour-filter {display:none;}
