--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,3 @@
-
 /* Global */
 body {background-color:#FFF; color:#333; font-family:Helvetica, Arial, sans-serif;}
 
@@ -9,7 +8,7 @@ nav li {display:inline-block; margin:0 5px;}
 nav a {background:#f9f9f9; border:6px solid #aab3bb; border-radius:100px; font-size:12px; height:100px; line-height:100px; text-transform:uppercase; width:100px;}
 nav a:hover,
 nav a.active {background:#efefef;}
-nav a.active {border:6px solid #999; font-weight:bold;}
+nav a.active {border:6px solid #EE7600; font-weight:bold;}
 
 
 /* Body */
@@ -29,4 +28,4 @@ section .active {display:block;}
 .video {display:inline-block; float:left; height:50%; padding:50px; width:50%;}
 .filters {display:none;}
 .sample {border:2px solid; border-radius:25px;}
-.query-builder {padding:50px;}
+.query-builder {display:inline-block; float:right; height:50%; width:50%;}
