--- a/css/buttons.css
+++ b/css/buttons.css
@@ -18,10 +18,15 @@ input[type="search"]::-webkit-search-cancel-button {-webkit-appearance:none;}
 textarea {overflow:auto; vertical-align:top;}
 
 button,
-.button {background-color:#333; border-radius:2px; color:#fff; font:100 13px/24px "proxima-nova", Helvetica; margin:3px; padding:5px 30px 4px; text-align:center; text-transform:uppercase;}
+.button {background-color:#333; border-radius:2px; color:#fff; font:100 16px/24px "proxima-nova", Helvetica; margin:3px; padding:5px 30px; text-align:center; text-shadow:0 1px 0 #333; text-transform:uppercase;}
 button:hover,
-.button:hover {background-color:#ff8a00; color:#fff; cursor:pointer;}
+.button:hover {background-color:#444; color:#fff; cursor:pointer;}
 button:active,
-.button:active {}
+.button:active {border:1px solid #666666; border-bottom:1px solid #333333;}
 
-.button.small {font-size:12px; line-height:12px; padding:4px 6px;}
+.activebutton-tech{border: solid 4px #EE7600;}
+.activebutton-role{border: solid 4px #EE7600;}
+.activebutton-ind{border: solid 4px #EE7600;}
+
+.showme {display: none;}
+
