Add populate filter list and code tidying

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -18,15 +18,13 @@ input[type="search"]::-webkit-search-cancel-button {-webkit-appearance:none;}
 textarea {overflow:auto; vertical-align:top;}
 
 button,
-.button {background-color:#333; border-radius:2px; color:#fff; font:100 16px/24px "proxima-nova", Helvetica; margin:3px; padding:5px 30px; text-align:center; text-shadow:0 1px 0 #333; text-transform:uppercase;}
+.button {background-color:#333; border:4px solid transparent; border-radius:2px; color:#fff; font:100 16px/24px "proxima-nova", Helvetica; margin:3px; padding:5px 30px; text-align:center; text-shadow:0 1px 0 #333; text-transform:uppercase;}
 button:hover,
 .button:hover {background-color:#444; color:#fff; cursor:pointer;}
 button:active,
-.button:active {border:1px solid #666666; border-bottom:1px solid #333333;}
+.button:active {background-color:#333;}
 
-.activebutton-tech{border: solid 4px #EE7600;}
-.activebutton-role{border: solid 4px #EE7600;}
-.activebutton-ind{border: solid 4px #EE7600;}
+.selected {border:4px solid #EE7600;}
 
 .showme {display: none;}
 
