--- a/css/global.css
+++ b/css/global.css
@@ -25,15 +25,15 @@ section .active {display:block;}
 .role .button {font-size:12px; line-height:12px; padding:4px 6px;}
 
 .tour-filter {display:none;}
-.video {display:inline-block; float:left; height:40%; width:50%; border:1px solid; border-radius:10px; border-color: #507786;}
+.video {display:inline-block; float:left; height:50%; width:50%; border:1px solid; border-radius:10px; border-color: #507786;}
 .filters {display:none;}
 .sample {border:2px solid; border-radius:25px;}
-.query-builder {display:inline-block; float:right; height:100%; width:50%; border:1px solid; border-radius:10px; border-color: #507786;}
-.query {height:100%; width:100%;}
+.query-builder {display:inline-block; float:right; height:50%; width:50%; border:1px solid; border-radius:10px; border-color: #507786;}
+.query {height:50%; width:100%;}
 
 input.switch:empty
 {
-  margin-left: -1500px;
+	margin-left: -1500px;
 }
 
 input.switch:empty ~ label
@@ -60,7 +60,7 @@ input.switch:empty ~ label:after
 	left: 0;
 	content: ' ';
 	width: 3.6em;
-	background-color: #333;
+	background-color: #FF7F24;
 	border-radius: 0.3em;
 	box-shadow: inset 0 0.2em 0 rgba(0,0,0,0.3);
 	-webkit-transition: all 100ms ease-in;
@@ -79,19 +79,31 @@ input.switch:empty ~ label:after
 
 input.switch:checked ~ label:before
 {
-	background-color: #FF7F24;
+	background-color: #333;
 }
 input.switch:checked ~ label:after
 {
 	margin-left: 2em;
 }
 
-.csdlswitch{position: absolute; top: 90%; left: 54%;}
+.csdlswitch{position: absolute; top: 91%; left: 55%;}
 
 .csdlcode
 {
    display: inline-block; float:right; background-color:#FFF; display:none; height: 100%; width: 100%;
 }
 
+.compile {position: absolute; top: 91.5%; left: 23%; cursor:help;}
 
+.marketo {display: none;}
+
+.demo {height:50%; width:100%;}
+
+.again {color: #FF7F24;}
+
+.new {display: none; position: absolute; top:70%; left: 15%;}
+
+.view {position: absolute; top:69%; left: 15%;}
+
+.follow {position: absolute; top:69%; left: 66%;}
 
